/*
 * $Id: ChangeLog,v 1.4835 2006/02/22 14:55:24 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-02-22 13:06 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/compiler/genc.c
    * Fixed minor bug in verbosity of HB_P_ADDINT

  * include/hbexprc.c
    + Optimized <NonLocalVar> += <Num> and <NonLocalVar> -= <Num> to use HB_P_ADDINT

  * source/vm/hvm.c
    * Revised HB_P_LOCALNEARADDINT, HB_P_ADDINT, HB_P_PLUS, and HB_P_MINUS
      to return CHARACTER type if *left* argument is a CHAR

  /*
     Please review #if and comment/questions
     in line 3981 of hvm.c (hb_vmPlus()
   */

2006-02-22 17:50 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/debug/debugger.prg
    ! Try harder to determine valid stop lines.

2006-02-21 20:08 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * makefile.vc
    + Added hbdead.c and hbstripl.c to harbour.exe generation.

2006-02-21 19:29 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/simplex.c
    * Removed support for MAX_STREAM in favor of new STREAM_SIZE_ALLOC
    * Improved sPair to use malloc()/realloc() instead of fixed size stack memory

  * source/compiler/hbslex.c
  * source/macro/macroslx.c
    - Removed no longer supported MAX_STREAM

  * source/compiler/harbour.slx
  * source/macro/macro.slx
    * Fixed GPF trap in STREAM_APPEND()

2006-02-21 17:33 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbvm.h
  * source/vm/hvm.c
    + added hb_vmRequest( USHORT uiRequest )
  * source/vm/estack.c
    + Added Save/Reset/Restore of HVM's s_uiActionRequest
      so that Desructors are never interrupted from being executed.
  * source/rtl/errorsys.prg
    + Added reset of DispBegin()s (thnx to Leo Letendre)

2006-02-21 23:05 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/compiler/hbfix.c